# SierraEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SierraEngine.sln  build.gradle.kts  gradle.properties  local.properties  main.cpp  settings.gradle
Dependencies/: AddIconToBinary.cmake  CMakeLists.txt  DeviceInfo.cmake  Macros.cmake
Dependencies/ImGui/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Dependencies/ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h
Dependencies/ImGuizmo/include/: GraphEditor.cpp  ImCurveEdit.cpp  ImCurveEdit.h  ImGuizmo.cpp  ImZoomSlider.h
Dependencies/Infoware/: CMakeLists.txt
Dependencies/Infoware/src/detail/: cpuid_non_windows.cpp
Dependencies/RareCpp/include/: Reflect.h
Sandbox/: CMakeLists.txt  CMakeSettings.json  build.gradle.kts
Sandbox/.android/: AndroidManifest.xml
Sandbox/examples/: HelloCube.cpp  HelloImGui.cpp  HelloTriangle.cpp  Windowing.cpp
Sandbox/resources/shaders/CubeShader.frag.shader/: shader.ios-simulator.metallib  shader.ios.metallib  shader.macos.metallib
Sandbox/resources/shaders/CubeShader.vert.shader/: shader.ios-simulator.metallib  shader.ios.metal  shader.ios.metallib  shader.macos.metal  shader.macos.metallib  shader.spv
Sandbox/shaders/: CubeShader.vert  ImGuiRenderTask.frag  ImGuiRenderTask.vert  TriangleShader.frag  TriangleShader.vert
Sandbox/src/: main.cpp
Sierra/: CMakeLists.txt  Sierra.cmake  requirements.md
Sierra/cmake/: CompilerDetection.cmake  DeviceInfo.cmake  PlatformDetection.cmake
Sierra/cmake/Android/: Android.cmake
Sierra/cmake/Linux/: Linux.cmake
Sierra/cmake/Platform/Android/: Android.cmake
Sierra/cmake/Toolchains/: android.toolchain.cmake  ios.toolchain.cmake
Sierra/cmake/iOS/: iOS.cmake
Sierra/include/: Sierra.h
Sierra/include/Sierra/: Sierra.glsl  Sierra.h
Sierra/scripts/: FileGenerator.py  FileToByteArray.py  ShaderCompiler.py  UpdateProject.py
Sierra/src/: Application.cpp  Application.h  CMakeLists.txt  srpch.h
Sierra/src/Core/: Application.cpp  Application.h  CMakeLists.txt  CursorManager.cpp  CursorManager.h  EntryPoint.h  Errors.cpp  Errors.h  EventDispatcher.h  EventDispatcher.hpp  FileManager.cpp  FileManager.h  InputManager.cpp  InputManager.h  Key.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  MouseButton.h  PlatformContext.cpp  PlatformContext.h  PlatformInstance.cpp  PlatformInstance.h  RNG.h  ScopeProfiler.cpp  ScopeProfiler.h  Screen.cpp  Screen.h  Time.cpp  Time.h  Touch.cpp  Touch.h  TouchManager.cpp  TouchManager.h  Types.h  UUID.hpp  Version.cpp  Version.h  Version.hpp  (+4 more)
Sierra/src/Engine/: CMakeLists.txt  File.cpp  File.h  MemoryObject.cpp  MemoryObject.h  RNG.cpp  RNG.h
Sierra/src/Events/: CMakeLists.txt  CursorEvent.h  Event.h  EventDispatcher.hpp  InputEvent.h  SwapchainEvent.h  TouchEvent.h  WindowEvent.h
Sierra/src/Extensions/: CMakeLists.txt  ImGuiRenderTask.cpp  ImGuiRenderTask.h
Sierra/src/Files/: CMakeLists.txt  FileErrors.cpp  FileErrors.h  FileManager.cpp  FileManager.h  FileStream.cpp  FileStream.h  PathErrors.cpp  PathErrors.h
Sierra/src/Platform/: CMakeLists.txt  EntryPoint.h  PlatformContext.h
Sierra/src/Rendering/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandTask.cpp  CommandTask.h  ComputePipeline.cpp  ComputePipeline.h  Device.cpp  Device.h  DeviceErrors.cpp  DeviceErrors.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImGuiRenderTask.cpp  ImGuiRenderTask.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RenderingBackendType.h  RenderingContext.cpp  RenderingContext.h  RenderingResource.h  ResourceTable.cpp  ResourceTable.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Swapchain.cpp  (+3 more)
Sierra/src/Sierra/: Application.cpp  Application.h
Sierra/src/Utilities/: CMakeLists.txt  Date.cpp  Date.h  File.cpp  File.h  FrameLimiter.cpp  FrameLimiter.h  Hash.hpp  RNG.cpp  RNG.h  Time.cpp  Time.h
Sierra/src/Windowing/: CMakeLists.txt  CursorEvents.cpp  CursorEvents.h  CursorManager.cpp  CursorManager.h  InputEvents.cpp  InputEvents.h  InputManager.cpp  InputManager.h  Key.cpp  Key.h  MouseButton.cpp  MouseButton.h  Screen.cpp  Screen.h  ScreenEvents.cpp  ScreenEvents.h  ScreenOrientation.h  Touch.cpp  Touch.h  TouchEvents.cpp  TouchEvents.h  TouchManager.cpp  TouchManager.h  Window.cpp  Window.h  WindowEvents.cpp  WindowEvents.h  WindowingBackendType.h
SierraEngine/: CMakeLists.txt  SierraEngine.cmake
SierraEngine/include/SierraEngine/: SierraEngine.h
SierraEngine/scripts/: UpdateProject.py
SierraEngine/src/: CMakeLists.txt  main.cpp  srepch.h  srpch.h
SierraEngine/src/Assets/: Asset.h  AssetID.cpp  AssetID.h  AssetID.hpp  AssetManager.cpp  AssetManager.h  CMakeLists.txt  ImageSupercompressor.cpp  ImageSupercompressor.h  ImageTranscoder.cpp  ImageTranscoder.h  SerializedAsset.h  SerializedScene.h  SerializedTexture.h  TextureAsset.h  TextureImporter.cpp  TextureImporter.h
SierraEngine/src/Core/: API.h  Application.cpp  Application.h  CMakeLists.txt  Component.h  FrameLimiter.cpp  FrameLimiter.h  ResourcePool.hpp  Scene.cpp  Scene.h  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp
SierraEngine/src/Rendering/: ArenaAllocator.cpp  ArenaAllocator.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Vertex.h
SierraEngine/src/Scene/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityID.h  Scene.cpp  Scene.h
SierraEngineEditor/: CMakeLists.txt
SierraEngineEditor/src/: CMakeLists.txt  EntryPoint.cpp  main.cpp  pch.h
SierraEngineEditor/src/Assets/: AssetSerializer.h  CMakeLists.txt  EditorAssetManager.cpp  EditorAssetManager.h
SierraEngineEditor/src/Core/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.h
SierraEngineEditor/src/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  HierarchyPanel.cpp  HierarchyPanel.h  MenuBar.cpp  MenuBar.h  RenderPanel.cpp  RenderPanel.h
SierraEngineEditor/src/Rendering/: CMakeLists.txt  EditorRenderer.cpp  EditorRenderer.h  EditorSurface.cpp  EditorSurface.h
(+1104 files in other folders)
